--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,12 +46,13 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import pickle\n",
     "import numpy as np\n",
+    "from scipy.spatial.distance import cosine\n",
     "import warnings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,9 +248,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\courn\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1411,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1420,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1453,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,12 +1619,12 @@
     "    scores = []\n",
     "    for groupe in groupes:\n",
     "        if use_pipe and use_bm25:\n",
-    "            scores.append(estimate_score(getTopDocs(bm25, text2Token(groupe), documents, ratings), origin_query))\n",
+    "            scores.append(estimate_score(getTopDocs(bm25, text2Token(groupe), documents, ratings), groupe))\n",
     "        elif use_pipe:\n",
-    "            scores.append(estimate_score(None, origin_query, use_bm25=False))\n",
+    "            scores.append(estimate_score(None, groupe, use_bm25=False))\n",
     "        elif use_bm25:\n",
     "            scores.append(estimate_score(getTopDocs(bm25, text2Token(groupe), documents, ratings)))\n",
-    "            \n",
+    "    \n",
     "    pos_list = []\n",
     "    neg_list = []\n",
     "    for groupe, score in zip(groupes, scores):\n",
@@ -1628,15 +1637,15 @@
     "        elif score <= 2.5:\n",
     "            neg_list.append((groupe, sumFreq))\n",
     "\n",
-    "    pos_list = [sentence[0] for sentence in sorted(pos_list, key=lambda x: x[1], reverse=True)[:top]]\n",
-    "    neg_list = [sentence[0] for sentence in sorted(neg_list, key=lambda x: x[1], reverse=True)[:top]]\n",
+    "    pos_list = [sentence[0] for sentence in pos_list[:top]]\n",
+    "    neg_list = [sentence[0] for sentence in neg_list[:top]]\n",
     "\n",
     "    return pos_list, neg_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1647,7 +1656,7 @@
     "    if use_bm25:\n",
     "        top_docs = getTopDocs(bm25, query, documents, ratings, top=5)\n",
     "        most_freq = getMostFrequentWords([doc[0] for doc in top_docs], top=50)\n",
-    "    pos_list, neg_list = getRevelantSentences(origin_query, most_freq, documents, ratings, top=5, use_bm25 = True, use_pipe = True)\n",
+    "    pos_list, neg_list = getRevelantSentences(origin_query, most_freq, documents, ratings, top=5, use_bm25 = use_bm25, use_pipe = use_pipe)\n",
     "    if not use_pipe:\n",
     "        origin_query = None\n",
     "    return estimate_score(top_docs, origin_query, use_bm25=use_bm25), pos_list, neg_list"
@@ -1669,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1692,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1703,28 +1712,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: Dossier avec anomalie mais évidemment, les explications ne sont pas claires, ce qui implique d'appeler (0,80€ la minute avec généralement 5 minutes d'attente). J'ai appelé ce matin et la conseillère m'a raccroché au nez ! Les personnes que nous avons au téléphone ne connaissent pas les dossiers, traités par des agents, mais ces derniers ne sont pas joignables directement (évidemment). Cela fait maintenant 3 mois que mon dossier traîne et pas un conseiller n'est capable de m'expliquer clairement ce qui coince... à fuir !\n",
-      "Vrai score: 1\n",
-      "Score: 2.397960967295189\n",
-      "Séquences positives: []\n",
-      "Séquences négatives: [\"ce qui implique d'appeler (0,80€ la minute avec généralement 5 minutes d'attente).\", 'Cela fait maintenant 3 mois que mon dossier traîne', \"J'ai appelé ce matin\", 'Les personnes que nous avons au téléphone ne connaissent pas les dossiers,', \"la conseillère m'a raccroché au nez !\"]\n"
+      "['Le produit est très bon', 'le service lient est nul !']\n",
+      "Query: Le produit est très bon mais le service lient est nul !\n",
+      "Vrai score: 0\n",
+      "Score: 2.6\n",
+      "Séquences positives: ['Le produit est très bon']\n",
+      "Séquences négatives: ['le service lient est nul !']\n"
      ]
     }
    ],
    "source": [
-    "elmt = test.iloc[random.randint(0, len(test))]\n",
-    "origin_query = elmt[\"review_text\"]\n",
-    "score, pos_list, neg_list = main(origin_query, use_bm25=True, use_pipe=False)\n",
+    "origin_query = \"Le produit est très bon mais le service lient est nul !\"\n",
+    "score, pos_list, neg_list = main(origin_query)\n",
     "\n",
     "print(f\"Query: {origin_query}\")\n",
-    "print(f\"Vrai score: {elmt['review_rating']}\")\n",
+    "print(f\"Vrai score: {0}\")\n",
     "\n",
     "print(f\"Score: {score[0]}\")\n",
     "print(f\"Séquences positives: {pos_list}\")\n",
@@ -1891,78 +1900,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.spatial.distance import cosine"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frequents_vectors = pd.read_csv(\"wordsmost_frequent_with_vectors.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frequents_vectors[\"embedding\"] = frequents_vectors[\"embedding\"].apply(lambda x: ast.literal_eval(re.sub(r',+', ',', x.replace(\" \", \",\").replace(\"\\n\", \",\")).replace(\"[,\", \"[\").replace(\",]\", \"]\")))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "frequents_vectors = pd.read_csv(\"wordsmost_frequent_with_vectors.csv\")\n",
+    "frequents_vectors[\"embedding\"] = frequents_vectors[\"embedding\"].apply(lambda x: ast.literal_eval(re.sub(r',+', ',', x.replace(\" \", \",\").replace(\"\\n\", \",\")).replace(\"[,\", \"[\").replace(\",]\", \"]\")))\n",
+    "\n",
     "def text2vector(text):\n",
-    "    idx_to_inverse = []\n",
-    "    tokens = text2Token(text, use_n_grams=False, add_same_without_stem=True)\n",
-    "    for keywords_inverse in [\"aucun\", \"ni\", \"pas\", \"manque\"]:\n",
-    "        for keyword_inverse in [STEMMER.stem(keywords_inverse), keywords_inverse]:\n",
-    "            while keyword_inverse in tokens:\n",
-    "                idx = tokens.index(keyword_inverse)\n",
-    "                idx_to_inverse.append(tokens[idx + 1])\n",
-    "                tokens[idx] += \"_\"\n",
+    "    all_vectors = [frequents_vectors[frequents_vectors[\"fr\"] == word].iloc[0][\"embedding\"] for word in text2Token(text, use_n_grams=False, add_same_without_stem=True) if word in frequents_vectors[\"fr\"].tolist()]\n",
     "\n",
-    "    for idx in idx_to_inverse:\n",
-    "        tokens[idx - 1] = tokens[idx - 1][:-1]\n",
+    "    return [sum([vector[i] for vector in all_vectors]) for i in range(len(all_vectors[0]))]\n",
     "\n",
-    "    all_vectors = [frequents_vectors[frequents_vectors[\"fr\"] == word].iloc[0][\"embedding\"] for word in tokens if word in frequents_vectors[\"fr\"].tolist()]\n",
+    "TOPICS = [(\"Relatif au temps\", text2vector(\"rapidité vitesse lenteur retard\")),\n",
+    "          (\"Relatif à la qualité\", text2vector(\"panne bug qualité performance\")),\n",
+    "          (\"Relatif au prix\", text2vector(\"cher marché prix\")),\n",
+    "          (\"Relatif au service client\", text2vector(\"service client\"))\n",
+    "          ]\n",
     "\n",
-    "    for idx in idx_to_inverse:\n",
-    "        if len(all_vectors) > idx:\n",
-    "            all_vectors[idx] = [-elmt for elmt in all_vectors[idx]]\n",
-    "\n",
-    "    return [sum([vector[i] for vector in all_vectors]) for i in range(len(all_vectors[0]))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def getTopic(text):\n",
     "    try:\n",
-    "        topics_full_name = [\"Relatif au temps\", \"Relatif à la qualité\", \"Relatif au prix\", \"Relatif au service client\"]\n",
-    "        topics = [\"rapidité vitesse lenteur retard\", \"panne bug qualité performance\", \"cher marché prix\", \"service client\"]\n",
-    "        topics_vectors = [text2vector(topic) for topic in topics]\n",
     "        text_vector = text2vector(text)\n",
-    "        best_topic = topics_full_name[0]\n",
-    "        best_score = 1 - cosine(topics_vectors[0], text_vector)\n",
-    "        for i in range(1, len(topics)):\n",
-    "            score = 1 - cosine(topics_vectors[i], text_vector)\n",
+    "        best_topic = TOPICS[0][0]\n",
+    "        best_score = 1 - cosine(TOPICS[0][1], text_vector)\n",
+    "        for i in range(1, len(TOPICS)):\n",
+    "            score = 1 - cosine(TOPICS[i][1], text_vector)\n",
     "            if score > best_score:\n",
     "                best_score = score\n",
-    "                best_topic = topics_full_name[i]\n",
+    "                best_topic = TOPICS[i][0]\n",
     "        return best_topic\n",
     "    except:\n",
     "        return \"Ne peut pas être déterminé\""
@@ -1970,15 +1935,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: a fuir, vous mène en bateau pendant plus d'un mois pour la livraison d'une voiture qui n'aura jamais lieu alors que je l'avais payé comptant plus d'un mois avant, lamentable, je ne sais meme pas si je vais pouvoir me faire rembourser!!!\n",
-      "Vrai score: 1\n",
+      "Query: La DS7 est extraordinaire; « le savoir faire Français » petite claque aux allemandes reste à convaincre les français, Sylvie a compris et répondue à ma demande mes questions étaient pourtant pertinentes , grâce à ses tarifs très avantageux AutoJM m’a permis d’acquérir cette auto. Seul petit hic, les délais  mais les voitures d’excellence savent se faire désirer. Bravo Sylvie très professionnelle qui ma permis d’imaginer et de visualiser véhicule que je souhaitais avoir.Merci beaucoup.\n",
+      "Vrai score: 4\n",
       "Thème: Relatif à la qualité\n"
      ]
     }
